# 2021-winter-file-system-analyze

./: .gitignore  README.md
cpp.common-master/: .gitignore  CMakeLists.txt  LICENSE  README.md  Requirements.md  TODO.md
cpp.common-master/ctest/: CMakeLists.txt  Rakefile  test_api_sqlite3.cpp  test_async_runnable.cpp  test_bplist_repr.cpp  test_byte_buffer2.cpp  test_file_util.cpp  test_progressable.cpp  test_raw_device.cpp  test_scope_guard.cpp  test_stream.cpp  test_timestamp.cpp
cpp.common-master/data/: bplist_test.plist
cpp.common-master/gtest/: test_byte_buffer2.cpp  test_time_stamp.cpp
cpp.common-master/include/: async_runnable.hpp  base64.hpp  bounded_buffer.hpp  bplist.hpp  byte_buffer2.hpp  date.hpp  extent.hpp  file_util.hpp  handle.hpp  long_runnable.hpp  plist_parser.hpp  progressable.hpp  propagate_const.hpp  sqlite_pp.hpp  stoppable.hpp  stream.hpp  string_util.hpp
cpp.common-master/include/net/: socket.hpp
cpp.common-master/include/sqlite3/: connection.hpp  connection_handle.hpp  exception.hpp  statement.hpp  statement_handle.hpp
cpp.common-master/include/sys/: active_regex.hpp  asio_threadpool.hpp  dylib.hpp  raw_device.hpp  time_stamp.hpp
cpp.common-master/lib.ruby/: byte_buffer2.rb
cpp.common-master/src/: CMakeLists.txt  Makefile  active_regex.cpp  base64.cpp  bplist.cpp  bplist_repr.cpp  byte_buffer2.cpp  file_util.cpp  gzip.cpp  main.cpp  plist_parser.cpp  stream.cpp  string_util.cpp  time_stamp.cpp
practice/day01/: a.out  handling_error.c  introduction_fileIO.c  popen.c  umask_function.c  unix_standard.c
(+7 files in other folders)
